깃허브주소

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="bottom">
             <div id="nav">
                 <a href="#">베스트</a>
-                <a href="#" class="face">
+                <a href="./product_list.html" class="face">
                     <span>페이스</span>
                     <img src="./images/direction_under.png" alt="">
                 </a>
@@ -74,8 +74,8 @@
                     <span>립</span>
                     <img src="./images/direction_under.png" alt=""></a>
                 <a href="#">메이크업툴</a>
-                <a href="#">리뷰</a>
-                <a href="#">묻고 답하기</a>
+                <a href="./review.html">리뷰</a>
+                <a href="./qna.html">묻고 답하기</a>
                 <a href="#">아멜리 멤버십 라운지</a>
             </div>
         </div>
@@ -96,8 +96,6 @@
             <!-- If we need navigation buttons -->
             <div class="swiper-button-prev"></div>
             <div class="swiper-button-next"></div>
-            <!-- If we need scrollbar -->
-            <div class="swiper-scrollbar"></div>
         </div>
         <!-- event_bnr -->
         <a href="#" class="event_bg">
@@ -168,7 +166,6 @@
                     <!-- If we need pagination -->
                     <div class="swiper-pagination"></div>
                 </div>
-                <div class="swiper-navigation"></div>
                 <!-- If we need navigation buttons -->
                 <div class="swiper-button-prev"></div>
                 <div class="swiper-button-next"></div>
