--- a/product_list.html
+++ b/product_list.html
@@ -9,6 +9,9 @@
     <!-- favicon -->
     <link rel="shortcut icon" href="./images/ameli_favicon.ico" type="image/x-icon">
     <link rel="icon" href="./images/ameli_favicon.ico" type="image/x-icon">
+    <!-- swiper -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <!-- style -->
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/product_list.css">
@@ -59,7 +62,7 @@
         <div class="bottom">
             <div id="nav">
                 <a href="#">베스트</a>
-                <a href="#" class="face">
+                <a href="./product_list.html" class="face">
                     <span>페이스</span>
                     <img src="./images/direction_under.png" alt="">
                 </a>
@@ -71,14 +74,15 @@
                     <span>립</span>
                     <img src="./images/direction_under.png" alt=""></a>
                 <a href="#">메이크업툴</a>
-                <a href="#">리뷰</a>
-                <a href="#">묻고 답하기</a>
+                <a href="./review.html">리뷰</a>
+                <a href="./qna.html">묻고 답하기</a>
                 <a href="#">아멜리 멤버십 라운지</a>
             </div>
         </div>
     </header>
     <!-- main -->
     <main>
+        <!-- title -->
         <section class="title_bg">
             <div class="title">
                 <h2>페이스</h2>
@@ -91,6 +95,7 @@
                 </div>
             </div>
         </section>
+        <!-- filter -->
         <section class="filter_bg">
             <div class="filter">
                 <div class="left">
@@ -141,6 +146,7 @@
                 </div>
             </div>
         </section>
+        <!-- arrival_criteria -->
         <section class="arrival_criteria_bg">
             <div class="arrival_criteria">
                 <div class="left">
@@ -157,6 +163,7 @@
                 </div>
             </div>
         </section>
+        <!-- view_way -->
         <section class="view_way_bg">
             <div class="view_way">
                 <div class="left">
@@ -180,6 +187,7 @@
                 </div>
             </div>
         </section>
+        <!-- item_all -->
         <section class="item_all_bg">
             <div class="item_all">
                 <div class="first_line">
@@ -190,15 +198,17 @@
                                 <!-- Additional required wrapper -->
                                 <div class="swiper-wrapper">
                                 <!-- Slides -->
-                                    <div class="swiper-slide slide1"></div>
-                                    <div class="swiper-slide slide2"></div>
+                                    <div class="swiper-slide slide1">
+                                        <img src="./images/product_list/1.jpg" alt="">
+                                    </div>
+                                    <div class="swiper-slide slide2">
+                                        <img src="./images/product_list/1_2.png" alt="">
+                                    </div>
                                 </div>
-                                <!-- If we need pagination -->
-                                <div class="swiper-pagination"></div>
+                                <!-- If we need navigation buttons -->
+                                <div class="swiper-button-prev"></div>
+                                <div class="swiper-button-next"></div>
                             </div>
-                            <!-- If we need navigation buttons -->
-                            <div class="swiper-button-prev"></div>
-                            <div class="swiper-button-next"></div>
                         </div>
                         <div class="bottom">
                             <div class="price">
@@ -227,16 +237,13 @@
                                 <!-- Additional required wrapper -->
                                 <div class="swiper-wrapper">
                                 <!-- Slides -->
-                                    <div class="swiper-slide slide1"></div>
-                                    <div class="swiper-slide slide2"></div>
-                                    <div class="swiper-slide slide3"></div>
+                                    <div class="swiper-slide slide1"><img src="./images/product_list/2.jpg" alt=""></div>
+                                    <div class="swiper-slide slide2"><img src="./images/product_list/2_2.png" alt=""></div>
                                 </div>
-                                <!-- If we need pagination -->
-                                <div class="swiper-pagination"></div>
+                                <!-- If we need navigation buttons -->
+                                <div class="swiper-button-prev"></div>
+                                <div class="swiper-button-next"></div>
                             </div>
-                            <!-- If we need navigation buttons -->
-                            <div class="swiper-button-prev"></div>
-                            <div class="swiper-button-next"></div>
                         </div>
                         <div class="bottom">
                             <div class="price">
@@ -265,16 +272,13 @@
                                 <!-- Additional required wrapper -->
                                 <div class="swiper-wrapper">
                                 <!-- Slides -->
-                                    <div class="swiper-slide slide1"></div>
-                                    <div class="swiper-slide slide2"></div>
-                                    <div class="swiper-slide slide3"></div>
+                                    <div class="swiper-slide slide1"><img src="./images/product_list/3.jpg" alt=""></div>
+                                    <div class="swiper-slide slide2"><img src="./images/product_list/3_2.png" alt=""></div>
                                 </div>
-                                <!-- If we need pagination -->
-                                <div class="swiper-pagination"></div>
+                                <!-- If we need navigation buttons -->
+                                <div class="swiper-button-prev"></div>
+                                <div class="swiper-button-next"></div>
                             </div>
-                            <!-- If we need navigation buttons -->
-                            <div class="swiper-button-prev"></div>
-                            <div class="swiper-button-next"></div>
                         </div>
                         <div class="bottom">
                             <div class="price">
@@ -303,16 +307,13 @@
                                 <!-- Additional required wrapper -->
                                 <div class="swiper-wrapper">
                                 <!-- Slides -->
-                                    <div class="swiper-slide slide1"></div>
-                                    <div class="swiper-slide slide2"></div>
-                                    <div class="swiper-slide slide3"></div>
+                                    <div class="swiper-slide slide1"><img src="./images/product_list/4.jpg" alt=""></div>
+                                    <div class="swiper-slide slide2"><img src="./images/product_list/4_2.png" alt=""></div>
                                 </div>
-                                <!-- If we need pagination -->
-                                <div class="swiper-pagination"></div>
+                                <!-- If we need navigation buttons -->
+                                <div class="swiper-button-prev"></div>
+                                <div class="swiper-button-next"></div>
                             </div>
-                            <!-- If we need navigation buttons -->
-                            <div class="swiper-button-prev"></div>
-                            <div class="swiper-button-next"></div>
                         </div>
                         <div class="bottom">
                             <div class="price">
@@ -340,16 +341,13 @@
                                 <!-- Additional required wrapper -->
                                 <div class="swiper-wrapper">
                                 <!-- Slides -->
-                                    <div class="swiper-slide slide1"></div>
-                                    <div class="swiper-slide slide2"></div>
-                                    <div class="swiper-slide slide3"></div>
+                                    <div class="swiper-slide slide1"><img src="./images/product_list/5.jpg" alt=""></div>
+                                    <div class="swiper-slide slide2"><img src="./images/product_list/5_2.png" alt=""></div>
                                 </div>
-                                <!-- If we need pagination -->
-                                <div class="swiper-pagination"></div>
+                                <!-- If we need navigation buttons -->
+                                <div class="swiper-button-prev"></div>
+                                <div class="swiper-button-next"></div>
                             </div>
-                            <!-- If we need navigation buttons -->
-                            <div class="swiper-button-prev"></div>
-                            <div class="swiper-button-next"></div>
                         </div>
                         <div class="bottom">
                             <div class="price">
@@ -376,16 +374,13 @@
                                 <!-- Additional required wrapper -->
                                 <div class="swiper-wrapper">
                                 <!-- Slides -->
-                                    <div class="swiper-slide slide1"></div>
-                                    <div class="swiper-slide slide2"></div>
-                                    <div class="swiper-slide slide3"></div>
+                                    <div class="swiper-slide slide1"><img src="./images/product_list/6.jpg" alt=""></div>
+                                    <div class="swiper-slide slide2"><img src="./images/product_list/6_2.png" alt=""></div>
                                 </div>
-                                <!-- If we need pagination -->
-                                <div class="swiper-pagination"></div>
+                                <!-- If we need navigation buttons -->
+                                <div class="swiper-button-prev"></div>
+                                <div class="swiper-button-next"></div>
                             </div>
-                            <!-- If we need navigation buttons -->
-                            <div class="swiper-button-prev"></div>
-                            <div class="swiper-button-next"></div>
                         </div>
                         <div class="bottom">
                             <div class="price">
@@ -414,16 +409,13 @@
                                 <!-- Additional required wrapper -->
                                 <div class="swiper-wrapper">
                                 <!-- Slides -->
-                                    <div class="swiper-slide slide1"></div>
-                                    <div class="swiper-slide slide2"></div>
-                                    <div class="swiper-slide slide3"></div>
+                                    <div class="swiper-slide slide1"><img src="./images/product_list/7.jpg" alt=""></div>
+                                    <div class="swiper-slide slide2"><img src="./images/product_list/7_2.png" alt=""></div>
                                 </div>
-                                <!-- If we need pagination -->
-                                <div class="swiper-pagination"></div>
+                                <!-- If we need navigation buttons -->
+                                <div class="swiper-button-prev"></div>
+                                <div class="swiper-button-next"></div>
                             </div>
-                            <!-- If we need navigation buttons -->
-                            <div class="swiper-button-prev"></div>
-                            <div class="swiper-button-next"></div>
                         </div>
                         <div class="bottom">
                             <div class="price">
@@ -451,16 +443,13 @@
                                 <!-- Additional required wrapper -->
                                 <div class="swiper-wrapper">
                                 <!-- Slides -->
-                                    <div class="swiper-slide slide1"></div>
-                                    <div class="swiper-slide slide2"></div>
-                                    <div class="swiper-slide slide3"></div>
+                                    <div class="swiper-slide slide1"><img src="./images/product_list/8.jpg" alt=""></div>
+                                    <div class="swiper-slide slide2"><img src="./images/product_list/8_2.png" alt=""></div>
                                 </div>
-                                <!-- If we need pagination -->
-                                <div class="swiper-pagination"></div>
+                                <!-- If we need navigation buttons -->
+                                <div class="swiper-button-prev"></div>
+                                <div class="swiper-button-next"></div>
                             </div>
-                            <!-- If we need navigation buttons -->
-                            <div class="swiper-button-prev"></div>
-                            <div class="swiper-button-next"></div>
                         </div>
                         <div class="bottom">
                             <div class="price">
@@ -487,16 +476,13 @@
                                 <!-- Additional required wrapper -->
                                 <div class="swiper-wrapper">
                                 <!-- Slides -->
-                                    <div class="swiper-slide slide1"></div>
-                                    <div class="swiper-slide slide2"></div>
-                                    <div class="swiper-slide slide3"></div>
+                                    <div class="swiper-slide slide1"><img src="./images/product_list/9.jpg" alt=""></div>
+                                    <div class="swiper-slide slide2"><img src="./images/product_list/9_2.png" alt=""></div>
                                 </div>
-                                <!-- If we need pagination -->
-                                <div class="swiper-pagination"></div>
+                                <!-- If we need navigation buttons -->
+                                <div class="swiper-button-prev"></div>
+                                <div class="swiper-button-next"></div>
                             </div>
-                            <!-- If we need navigation buttons -->
-                            <div class="swiper-button-prev"></div>
-                            <div class="swiper-button-next"></div>
                         </div>
                         <div class="bottom">
                             <div class="price">
@@ -520,6 +506,7 @@
                 </div>
             </div>
         </section>
+        <!-- page -->
         <section class="page_bg">
             <div class="page">
                 <p>1</p>
